Prevent wrap of logout text
Also remove commented style line

--- a/resources/less/site.less
+++ b/resources/less/site.less
@@ -111,11 +111,11 @@
       p:nth-child(3) { font-size: 80%; }
       color: @paler-blue;
       display: inline-block;
-//      border-right: 1px solid @paler-blue;
       padding-right: 1em;
       height: @bar-height;
     }
     > div:nth-child(3) {
+      white-space: nowrap;
       line-height: @bar-height;
       margin-left: 1em;
     }
